[package]
name = "anvil-api"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
